[tool.poetry]
name = "discord-message-cleaner"
version = "0.1.0"
description = ""
authors = ["Gabriel Vailati <gabrielgvailati@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
discord = "^2.3.2"
asyncio = "^3.4.3"
python-dotenv = "^1.0.1"
discord-py = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
